🐛 fix bug on mobile screens nav bar

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -46,6 +46,10 @@
   --ham-after-active: bottom 0.1s ease-out, transform 0.22s cubic-bezier(0.215, 0.61, 0.355, 1) 0.12s;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   box-sizing: border-box;
   padding: 0;
